docs/api/qiskit/0.25/qiskit.optimization.algorithms.ADMMOptimizationResult.md
# qiskit.optimization.algorithms.ADMMOptimizationResult[¶](#qiskit-optimization-algorithms-admmoptimizationresult "Permalink to this headline")

<span id="undefined" />

`ADMMOptimizationResult(x, fval, variables, state, status)`

ADMMOptimization Result.

**Parameters**

*   **x** (`ndarray`) – the optimal value found by ADMM.
*   **fval** (`float`) – the optimal function value.
*   **variables** (`List`\[`Variable`]) – the list of variables of the optimization problem.
*   **state** (`ADMMState`) – the internal computation state of ADMM.
*   **status** (`OptimizationResultStatus`) – Termination status of an optimization algorithm

<span id="undefined" />

`__init__(x, fval, variables, state, status)`

**Parameters**

*   **x** (`ndarray`) – the optimal value found by ADMM.
*   **fval** (`float`) – the optimal function value.
*   **variables** (`List`\[`Variable`]) – the list of variables of the optimization problem.
*   **state** (`ADMMState`) – the internal computation state of ADMM.
*   **status** (`OptimizationResultStatus`) – Termination status of an optimization algorithm

## Methods

|                                                                                                                                                                                   |                     |
| --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------- |
| [`__init__`](#qiskit.optimization.algorithms.ADMMOptimizationResult.__init__ "qiskit.optimization.algorithms.ADMMOptimizationResult.__init__")(x, fval, variables, state, status) | **type x**`ndarray` |

## Attributes

|                                                                                                                                                                  |                                                                                         |
| ---------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------- |
| [`fval`](#qiskit.optimization.algorithms.ADMMOptimizationResult.fval "qiskit.optimization.algorithms.ADMMOptimizationResult.fval")                               | Returns the optimal function value.                                                     |
| [`raw_results`](#qiskit.optimization.algorithms.ADMMOptimizationResult.raw_results "qiskit.optimization.algorithms.ADMMOptimizationResult.raw_results")          | Return the original results object from the optimization algorithm.                     |
| [`samples`](#qiskit.optimization.algorithms.ADMMOptimizationResult.samples "qiskit.optimization.algorithms.ADMMOptimizationResult.samples")                      | Returns the list of solution samples                                                    |
| [`state`](#qiskit.optimization.algorithms.ADMMOptimizationResult.state "qiskit.optimization.algorithms.ADMMOptimizationResult.state")                            | returns state                                                                           |
| [`status`](#qiskit.optimization.algorithms.ADMMOptimizationResult.status "qiskit.optimization.algorithms.ADMMOptimizationResult.status")                         | Returns the termination status of the optimization algorithm.                           |
| [`variable_names`](#qiskit.optimization.algorithms.ADMMOptimizationResult.variable_names "qiskit.optimization.algorithms.ADMMOptimizationResult.variable_names") | Returns the list of variable names of the optimization problem.                         |
| [`variables`](#qiskit.optimization.algorithms.ADMMOptimizationResult.variables "qiskit.optimization.algorithms.ADMMOptimizationResult.variables")                | Returns the list of variables of the optimization problem.                              |
| [`variables_dict`](#qiskit.optimization.algorithms.ADMMOptimizationResult.variables_dict "qiskit.optimization.algorithms.ADMMOptimizationResult.variables_dict") | Returns the optimal value as a dictionary of the variable name and corresponding value. |
| [`x`](#qiskit.optimization.algorithms.ADMMOptimizationResult.x "qiskit.optimization.algorithms.ADMMOptimizationResult.x")                                        | Returns the optimal value found in the optimization or None in case of FAILURE.         |

<span id="undefined" />

`property fval`

Returns the optimal function value.

**Return type**

`float`

**Returns**

The function value corresponding to the optimal value found in the optimization.

<span id="undefined" />

`property raw_results`

Return the original results object from the optimization algorithm.

Currently a dump for any leftovers.

**Return type**

`Any`

**Returns**

Additional result information of the optimization algorithm.

<span id="undefined" />

`property samples`

Returns the list of solution samples

**Return type**

`List`\[`SolutionSample`]

**Returns**

The list of solution samples.

<span id="undefined" />

`property state`

returns state

**Return type**

`ADMMState`

<span id="undefined" />

`property status`

Returns the termination status of the optimization algorithm.

**Return type**

`OptimizationResultStatus`

**Returns**

The termination status of the algorithm.

<span id="undefined" />

`property variable_names`

Returns the list of variable names of the optimization problem.

**Return type**

`List`\[`str`]

**Returns**

The list of variable names of the optimization problem.

<span id="undefined" />

`property variables`

Returns the list of variables of the optimization problem.

**Return type**

`List`\[`Variable`]

**Returns**

The list of variables.

<span id="undefined" />

`property variables_dict`

Returns the optimal value as a dictionary of the variable name and corresponding value.

**Return type**

`Dict`\[`str`, `float`]

**Returns**

The optimal value as a dictionary of the variable name and corresponding value.

<span id="undefined" />

`property x`

Returns the optimal value found in the optimization or None in case of FAILURE.

**Return type**

`Optional`\[`ndarray`]

**Returns**

The optimal value found in the optimization.
